--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="obw.png" sizes="192x192">
 <title>Open Banking Wallet</title>
-</head><body>
-Hi
+<style type="text/css">
+body {margin:1em;color:#000000;font-family:Verdana,'Bitstream Vera Sans','DejaVu Sans',Arial,'Liberation Sans';background-color:white}
+a {color:blue;text-decoration:none}
+.item {padding:0.7em 0 0 2em}
+.header {font-size:1.2em;margin-top:1em}
+</style>
+</head>
+<body>
+<div style="font-weight:300;font-size:1.5em;text-align:center;padding:1.5em">Open Banking Wallet</div>
+<div style="font-style:italic">This repository holds links to the information resources required to fully describe the Open Banking Wallet.</div> 
+
+<div class="header">Core Documents</div>
+<div class="item"><a href="https://github.com/cyberphone/doc/blob/gh-pages/payments/dual-mode-open-banking-api.md#background">Project Background</a></div>
+<div class="item"><a href="https://cyberphone.github.io/doc/saturn/">Saturn - Universal Wallet</a></div>
+<div class="item"><a href="https://github.com/cyberphone/openbankingwallet/blob/gh-pages/adapting-open-banking-apis.md#adapting-an-open-banking-api-implementation">Adapting an Open Banking API Implementation</a></div>
+
+<div class="header">Video Clips (NOT YET RELEASED BECAUSE THE SOUND IS STILL MISSING)</div>
+<div class="item">Technology Overview: <a href="https://vimeo.com/374588892">https://vimeo.com/374588892</a></div>
+<div class="item">Payment Operations: <a href="https://vimeo.com/373153287">https://vimeo.com/373153287</a></div>
+<div class="item">Enrollment: <a href="https://vimeo.com/374590495">https://vimeo.com/374590495</a></div>
+
+<div class="header">Implementations</div>
+
+<div class="item">For folks with interests in running code, 
+the following proof-of-concept implementation may be of interest:
+<a href="https://github.com/cyberphone/swedbank-psd2-saturn">https://github.com/cyberphone/swedbank-psd2-saturn</a></div>
+
 </body>
 </html>
