--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ a {color:blue;text-decoration:none}
 <div class="item"><a href="https://cyberphone.github.io/doc/saturn/">Saturn - Universal Wallet</a></div>
 <div class="item"><a href="https://github.com/cyberphone/openbankingwallet/blob/gh-pages/adapting-open-banking-apis.md#adapting-an-open-banking-api-implementation">Adapting an Open Banking API Implementation</a></div>
 
-<div class="header">Video Clips (NOT YET RELEASED BECAUSE THE SOUND IS STILL MISSING)</div>
-<div class="item">Technology Overview: <a href="https://vimeo.com/374588892">https://vimeo.com/374588892</a></div>
+<div class="header">Video Clips (NOT YET OFFICIAL BECAUSE THE SOUND IS STILL MISSING)</div>
 <div class="item">Payment Operations: <a href="https://vimeo.com/373153287">https://vimeo.com/373153287</a></div>
+<div class="item">Technology Overview: <a href="https://vimeo.com/374588892">https://vimeo.com/374588892</a></div>
 <div class="item">Enrollment: <a href="https://vimeo.com/374590495">https://vimeo.com/374590495</a></div>
 
 <div class="header">Implementations</div>
