--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" href="obw.png" sizes="192x192">
+<link rel="icon" href="../doc/saturn/saturn.png" sizes="192x192">
 <title>Open Banking Wallet</title>
 <style type="text/css">
 body {margin:1em;color:#000000;font-family:Verdana,'Bitstream Vera Sans','DejaVu Sans',Arial,'Liberation Sans';background-color:white}
