--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ body {margin:1em;color:#000000;font-family:Verdana,'Bitstream Vera Sans','DejaVu
 a {color:blue;text-decoration:none}
 .item {padding:0.7em 0 0 2em}
 .header {font-size:1.2em;margin-top:1em}
+li {padding:0 0 5pt 0;margin:0}
 </style>
 </head>
 <body>
@@ -18,7 +19,7 @@ a {color:blue;text-decoration:none}
 <div class="header">Core Documents</div>
 <div class="item"><a href="https://github.com/cyberphone/doc/blob/gh-pages/payments/dual-mode-open-banking-api.md#background">Project Background</a></div>
 <div class="item"><a href="https://cyberphone.github.io/doc/saturn/">Saturn - Universal Wallet</a></div>
-<div class="item"><a href="https://github.com/cyberphone/openbankingwallet/blob/gh-pages/adapting-open-banking-apis.md#adapting-an-open-banking-api-implementation">Adapting an Open Banking API Implementation</a></div>
+<div class="item"><a href="https://github.com/cyberphone/openbankingwallet/blob/gh-pages/adapting-open-banking-apis.md#adapting-an-open-banking-api-implementation">Upgrading an Open Banking API Implementation</a></div>
 
 <div class="header">Video Clips (NOT YET OFFICIAL BECAUSE THE SOUND IS STILL MISSING)</div>
 <div class="item">Payment Operations: <a href="https://vimeo.com/373153287">https://vimeo.com/373153287</a></div>
@@ -26,10 +27,18 @@ a {color:blue;text-decoration:none}
 <div class="item">Enrollment: <a href="https://vimeo.com/374590495">https://vimeo.com/374590495</a></div>
 
 <div class="header">Implementations</div>
-
 <div class="item">For folks with interests in running code, 
 the following proof-of-concept implementation may be of interest:
 <a href="https://github.com/cyberphone/swedbank-psd2-saturn">https://github.com/cyberphone/swedbank-psd2-saturn</a></div>
 
+<div class="header">Under Development</div>
+<div>
+<ul>
+<li>Person-to-person payments.</li>
+<li>NFC/BLE interface for physical world payments, currently only possible to perform via QR code.</li>
+<li>Digital receipts.</li>
+</ul>
+</div>
+<div style="font-size:0.8em;padding-top:2em">Version 0.1, 2019-11-22</div>
 </body>
 </html>
