--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 <link rel="icon" href="../doc/saturn/saturn.png" sizes="192x192">
 <title>Open Banking Wallet</title>
 <style type="text/css">
-body {margin:1em;color:#000000;font-family:Verdana,'Bitstream Vera Sans','DejaVu Sans',Arial,'Liberation Sans';background-color:white}
+body {margin:0;color:#000000;font-family:Verdana,'Bitstream Vera Sans','DejaVu Sans',Arial,'Liberation Sans';background-color:white}
 a {color:blue;text-decoration:none}
-.item {padding:0.7em 0 0 2em}
-.header {font-size:1.2em;margin-top:1em}
-li {padding:0 0 5pt 0;margin:0}
+.item {padding:0.7em 1em 0 3em}
+.header {font-size:1.2em;margin:1em 1em 0 1em}
+li {padding:0 0 0.5em 0;margin:0 1.5em}
 </style>
 </head>
 <body>
-<div style="font-weight:300;font-size:1.5em;text-align:center;padding:1.5em">Open Banking Wallet</div>
-<div style="font-style:italic">This repository holds links to the information resources required to fully describe the Open Banking Wallet.</div> 
+<div style="background-image:url('openbanking-wallet-for-html-bgnd.png');text-align:center">
+<img src="openbanking-wallet-for-html-pict.png" alt="obw" style="width:40em;max-width:80%"></div>
+<div style="font-style:italic;margin:2em 1em 0 1em">This repository holds links to the information resources required to fully describe the Open Banking Wallet.</div> 
 
 <div class="header">Core Documents</div>
 <div class="item"><a href="https://github.com/cyberphone/doc/blob/gh-pages/payments/dual-mode-open-banking-api.md#background">Project Background</a></div>
@@ -39,6 +40,6 @@ the following proof-of-concept implementation may be of interest:
 <li>Digital receipts.</li>
 </ul>
 </div>
-<div style="font-size:0.8em;padding-top:2em">Version 0.1, 2019-11-22</div>
+<div style="font-size:0.8em;padding:2em 1em 1em 1em">Version 0.11, 2019-12-15</div>
 </body>
 </html>
