--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@ li {padding:0 0 0.5em 0;margin:0 1.5em}
 <body>
 <div style="background-image:url('openbanking-wallet-for-html-bgnd.png');text-align:center">
 <img src="openbanking-wallet-for-html-pict.png" alt="obw" style="width:40em;max-width:80%"></div>
-<div style="font-style:italic;margin:2em 1em 0 1em">This repository holds links to the information resources required to fully describe the Open Banking Wallet.</div> 
+<div style="font-style:italic;margin:2em 1em 0 1em">This repository holds
+links to the information resources required to fully describe the
+Open Banking Wallet and associated infrastructure.</div> 
 
 <div class="header">Core Documents</div>
 <div class="item"><a href="https://github.com/cyberphone/doc/blob/gh-pages/payments/dual-mode-open-banking-api.md#background">Project Background</a></div>
